BuildHughes/translation-tool/inputs/source_meta/objects/OfferMgmt_Offer_Item_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Device__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Device</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Service__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Premium Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Service__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Support Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transport_Service__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Transport Service</label>
        <type>Checkbox</type>
    </fields>
    <label>OfferMgmt Offer Item Configuration</label>
</CustomObject>